--- a/charts/ontrack/templates/ontrack-deployment.yaml
+++ b/charts/ontrack/templates/ontrack-deployment.yaml
@@ -21,6 +21,8 @@ spec:
       {{- if .Values.elasticsearch.enabled }}
       initContainers:
         - name: wait-for-elasticsearch
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
           image: busybox:1.36
           command:
             - 'sh'
