#22 Using Elasticsearch & checking the dependencies

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,16 +36,14 @@ jobs:
         run: |
           helm lint charts/ontrack
 
+      - name: Image check
+        run: |
+          chmod +x scripts/check-images.sh
+          ./scripts/check-images.sh
+
       - name: Packaging
         run: |
           helm package charts/ontrack
-
-#      - name: Publishing in Chart Museum
-#        run: |
-#          curl --data-binary "@$(ls yontrack-*.tgz)" \
-#            --fail \
-#            --user "${{ secrets.CHARTMUSEUM_USERNAME }}:${{ secrets.CHARTMUSEUM_PASSWORD }}"\
-#            https://chartmuseum.nemerosa.net/api/charts
 
       - name: Publishing in Docker Hub (OCI)
         run: |
