--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -344,6 +344,14 @@ auth:
     tag: 26.2.5
     # -- Starting the server in verbose mode
     verbose: false
+    # -- General configuration of the init containers
+    initContainers:
+      # -- Configuration of the image used for the init containers
+      image:
+        # -- Image repository (including the registry)
+        repository: busybox
+        # Image tag
+        tag: 1.37.0
     # -- Admin user for the admin console of Keycloak
     bootstrap:
       # -- Username to connect to Bootstrap. Prefer using a secret.
