--- a/charts/ontrack/templates/ontrack-deployment.yaml
+++ b/charts/ontrack/templates/ontrack-deployment.yaml
@@ -23,7 +23,7 @@ spec:
         - name: wait-for-elasticsearch
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: busybox:1.36
+          image: {{ .Values.initContainers.image.repository }}:{{ .Values.initContainers.image.tag }}
           command:
             - 'sh'
             - '-c'
