ci: basic integration with Yontrack & auto-versioning

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,15 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Yontrack configuration
+        id: yontrack-config
+        uses: nemerosa/ontrack-github-actions-cli-config@v1.0.3
+        env:
+          YONTRACK_URL: ${{ vars.ONTRACK_URL }}
+          YONTRACK_TOKEN: ${{ secrets.ONTRACK_TOKEN }}
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
