#25 Configurable log level for Keycloak

--- a/charts/ontrack/templates/keycloak-deployment.yaml
+++ b/charts/ontrack/templates/keycloak-deployment.yaml
@@ -198,6 +198,8 @@ spec:
               value: "/{{ .Values.auth.keycloak.service.path }}"
             - name: KC_HEALTH_ENABLED
               value: "true"
+            - name: KC_LOG_LEVEL
+              value: {{ .Values.auth.keycloak.logLevel | quote }}
           ports:
             - name: http
               containerPort: 8080
