--- a/charts/ontrack/templates/route.yaml
+++ b/charts/ontrack/templates/route.yaml
@@ -25,4 +25,33 @@ spec:
     {{- else }}
     termination: none
     {{- end }}
+---
+{{- if and (eq "keycloak" .Values.auth.kind) (not .Values.auth.keycloak.external.enabled) }}
+apiVersion: route.openshift.io/v1
+kind: Route
+metadata:
+  name: {{ $fullName }}-keycloak
+  labels:
+    {{- include "ontrack.labels.keycloak" . | nindent 4 }}
+  {{- with .Values.ingress.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+spec:
+  host: {{ .Values.ingress.host }}
+  path: /{{ .Values.auth.keycloak.service.path }}
+  to:
+    kind: Service
+    name: {{ $fullName }}-keycloak
+    weight: 100
+  port:
+    targetPort: http
+  tls:
+    {{- if .Values.ingress.tls.enabled }}
+    termination: edge
+    insecureEdgeTerminationPolicy: Redirect
+    {{- else }}
+    termination: none
+    {{- end }}
+{{- end }}
 {{- end }}
