ci: missing release label in Yontrack

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,3 +99,4 @@ jobs:
         if: ${{ steps.publish.outcome != '' && steps.publish.outcome != 'skipped' }}
         run: |
           yontrack validate --validation release --status ${{ steps.publish.outcome == 'success' && 'PASSED' || 'FAILED' }}
+          yontrack build set-property release "${{ steps.release.outputs.currentRelease }}"
