--- a/charts/ontrack/templates/ontrack-deployment.yaml
+++ b/charts/ontrack/templates/ontrack-deployment.yaml
@@ -268,6 +268,13 @@ spec:
               containerPort: 8800
               protocol: TCP
           resources: {{ toYaml .Values.ontrack.resources | nindent 12 }}
+          startupProbe:
+            httpGet:
+              path: /manage/health/readiness
+              port: mgt
+            failureThreshold: {{ .Values.ontrack.probes.startup.failureThreshold }}
+            periodSeconds: {{ .Values.ontrack.probes.startup.periodSeconds }}
+            initialDelaySeconds: {{ .Values.ontrack.probes.startup.initialDelaySeconds }}
           livenessProbe:
             httpGet:
               path: /manage/health/liveness
