#51 Specific option to disable the provisioning of users in Keycloak

--- a/charts/ontrack/templates/keycloak-admin-external-secret.yaml
+++ b/charts/ontrack/templates/keycloak-admin-external-secret.yaml
@@ -2,6 +2,7 @@
   (eq "keycloak" .Values.auth.kind)
   (not .Values.auth.keycloak.external.enabled)
   .Values.auth.keycloak.settings.enabled
+  .Values.auth.keycloak.settings.admin.enabled
   .Values.auth.keycloak.settings.admin.secret.enabled
   .Values.auth.keycloak.settings.admin.secret.external.enabled
 }}
